clusters/gw/apps/app/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vaultwarden
  name: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80
