clusters/gw/apps/app/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
spec:
  parentRefs:
    - name: gw-apps
      sectionName: vaultwarden-https
  hostnames:
    - "${VAULTWARDEN_VHOST}"
  rules:
    - backendRefs:
        - name: vaultwarden
          namespace: apps
          port: 80
